--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,1 +1,22 @@
-### all the packages and dependencies required to run the code
+cassandra-driver==3.25.0
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+geomet==0.2.1.post1
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+joblib==1.2.0
+MarkupSafe==2.0.1
+numpy==1.24.2
+pandas==2.0.0
+python-dateutil==2.8.2
+pytz==2021.1
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+smogn==0.1.2
+threadpoolctl==2.2.0
+tqdm==4.62.3
+Werkzeug==2.0.1
+seaborn==0.12.2
